2002-09-06  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Add ani to all_loaders.

Fri Sep  6 15:59:54 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdisplay.h: Remove unused prototype for 
	gdk_set_default_display 
	(=> gdk_display_manager_set_default_display)
	(#90616, Matthias Clasen)

Fri Sep  6 15:35:01 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkgc.c (gdk_gc_new_with_values): Only set
	gc->colormap if it isn't already set. (Alex Larsson,
	#90632)

Fri Sep  6 12:41:16 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c: Pass the actual input
	keycode to XIM, rather than the result of backconverting
	the keysym. Fixes the <> input problem! (#74922)

	* gtk/gtkimmodule.c: Fix bug where GTK_IM_MODULE environment
	variable couldn't be used to force the input method to
	the default input method.

2002-09-05  jacob berkman  <jacob@ximian.com>

	* configure.in: fix non-solaris xinerama checks (bug #89732)

	* autogen.sh: get automake-1.4 changes from -2-0 branch

2002-09-05  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkproperty-win32.c (gdk_property_change): Fix braino,
	actually do check each char, not just the first one, when looping
	through the text looking to insert CR in front of each LF. Bug
	noticed and fix provided by Florent Duguet.

	* gdk/win32/gdkwindow-win32.c (gdk_window_set_transient_for): 
	Use HWND_NOTOPMOST instead of HWND_TOPMOST. Suggested by Florent
	Duguet.

2002-09-04  Matthias Clasen  <maclas@gmx.de>

	* demos/testanimation.c (do_image): 
	(do_nonprogressive): Quit on destroy.

	* demos/testpixbuf.c (main): test load-at-size.
	(expose_func): draw transparent pixbufs against a checkerboard 
	pattern. (#91829)

2002-09-01  Soeren Sandmann  <sandmann@daimi.au.dk>

	* docs/reference/gtk/tmpl/gtkdialog.sgml
	docs/reference/gtk/tmpl/gtkhbbox.sgml
	docs/reference/gtk/tmpl/gtkvbbox.sgml
	docs/reference/gtk/tmpl/gtktogglebutton.sgml
	docs/reference/gtk/tmpl/gtktreeselection.sgml
	gtk/gtktextbuffer.c