@@ -1779,9 +1779,10 @@ static GtkReliefStyle
 get_button_relief (GtkToolbar *toolbar)
 {
   GtkReliefStyle button_relief = GTK_RELIEF_NORMAL;
-  
+
+  gtk_widget_ensure_style (GTK_WIDGET (toolbar));
   gtk_widget_style_get (GTK_WIDGET (toolbar),
-                        "button_relief", &button_relief,
+			"button_relief", &button_relief,
                         NULL);
 
   return button_relief;
